# forest_patrol_processing_box

./: .gitignore  README.md  check_gstreamer.py  forest-processing.service  main.py  pyproject.toml  requirements.txt  rtsp_colour.py  rtsp_watch.py
config/: settings.py
models/: yolo.py
services/: rtsp_client.py  rtsp_server.py
