[project]
name = "forest-processing-box"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.10",
    "aiortc>=1.9.0",
    "opencv-python>=4.10.0.84",
    "pygobject>=3.50.0",
    "tqdm>=4.67.1",
    "ultralytics>=8.3.48",
]
